--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,7 @@
 :root{
     --bg: black;
+    --accent: #E62C1F;
+    --texte: white;
 }
 
 *{
@@ -7,8 +9,40 @@
     padding: 0;
  }
 
-/*body{
+body{
     background-color: var(--bg);
-    background-image: url("../images/wave.svg");
-    image-resolution: ;
+}
+
+.navbar{
+    display: flex;
+    flex-direction: column;
+    width:20vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--accent);
+ }
+
+.navbar ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: space-between;
+    list-style: none;
+    font-size: 50px;
+}
+
+.navbar ul li a{
+    color: var(--texte);
+    text-decoration: none;
+}
+
+.navbar li a:hover {
+    text-decoration: underline;
+}
+
+.active {
+    color: var(--texte);
+    text-decoration: underline;
 }
