--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "JetBrains Mono Medium", sans-serif;
  }
 
 @font-face {
@@ -25,11 +26,15 @@ body{
 .navbar{
     display: flex;
     flex-direction: column;
-    width:20vw;
+    width:15vw;
     height: 100vh;
     align-items: center;
     justify-content: center;
     background-color: var(--accent);
+    position: fixed;
+ }
+.navbar ul img{
+    width: 18vw;
  }
 
 .navbar ul{
@@ -39,12 +44,12 @@ body{
     height: 100vh;
     justify-content: space-between;
     list-style: none;
-    font-size: 50px;
+    margin-bottom: 4.5vw;
 }
 
 .navbar ul li a{
-    font-family: "JetBrains Mono Medium", sans-serif;
     color: var(--texte);
+    font-size: 2.5vw;
     text-decoration: none;
 }
 
@@ -52,7 +57,48 @@ body{
     text-decoration: underline;
 }
 
-.active {
+.navbar li a:active {
     color: var(--texte);
     text-decoration: underline;
+}
+
+.main {
+    margin-left: 15vw;
+    height: 5000px;
+}
+
+.titre {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: inherit;
+    margin-top: 5vh;
+    background-color: var(--accent);
+ }
+
+.main p{
+    padding: 15px;
+    color: var(--texte);
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--accent);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #b30000;
 }
